--- a/style.css
+++ b/style.css
@@ -1,4 +1,19 @@
-/* Logo Box */
+
+.box,
+.feature-card,
+.course-item,
+.logo-box {
+    transition: all 0.3s ease;
+}
+
+.box:hover,
+.feature-card:hover,
+.course-item:hover,
+.logo-box:hover {
+    transform: translateY(-6px);
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.12);
+}
+
 .logo-box {
     width: 40px;
     height: 40px;
@@ -11,7 +26,9 @@
     border-radius: 6px;
     font-size: 20px;
 }
-
+body{
+    font-family: 'Poppins', sans-serif;
+}
 /* Portal Title */
 .portal-title {
     font-weight: bold;
@@ -109,6 +126,20 @@
 }
 
 
+/* Animation */
+.portal-title {
+    font-weight: 600;
+    opacity: 0;
+    transform: translateY(30px);
+    animation: fadeSlideUp 1s ease-out forwards;
+}
+
+@keyframes fadeSlideUp {
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
 /* Sub Text */
 .sub-text {
     font-size: 18px;
