--- a/second.css
+++ b/second.css
@@ -1,50 +1,19 @@
 body {
   font-family: Arial, sans-serif;
-  background: #9b5005;
+  background-color: #c7d2e3;
+  background-image: url("./images/background.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;   /* 🔥 Important */
+  background-attachment: fixed;
+  
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;  /* Better than height */
   flex-direction: column;
-
-    .header {
-            
-            padding: 15px 20px;
-            display: flex;
-            align-items: top;
-            box-shadow: 0 20px 8px rgba(248, 135, 14, 0.15);
-            position: relative;
-        }
-        .header img {
-            height: 90px;
-            position: absolute;
-            left: -300px;   /* corner position */
-            top: -970%;
-            transform: translateY(-100%);
-        }
-        .header h2 {
-            margin: 0 auto;
-            color: #1f2d3d;
-            font-size: 20px;
-            text-align: bottom;
-        }
-
-    footer {
-        margin: 30px 40px;
-        color: #351a1a;
-        font-size: 15px;
-        text-align: center;
-    }
-    
-
- /* MDU Logo Background */
-      background-image: url("./images/background.png"); /* add logo image */
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: 100%;
-      background-color: #c7d2e3;
-
 }
+
 select {
     background-color: #2c191a; /* light red for unselected */
     color: #333;
@@ -189,5 +158,10 @@ animation: bubble 7s linear infinite;
   width: 35px;
 }
 
+@media (max-width: 768px) {
+  .container {
+    width: 300px;
+  }
+}
 
 
