--- a/DashBoard.css
+++ b/DashBoard.css
@@ -43,7 +43,7 @@ body {
 .container {
   width: 95%;
   max-width: 501px;
-  max-height: 650px;
+  min-height: 522px;
   margin: 40px auto;
   background: white;
   padding: 30px;
